Made logging more understandble and standarized ror other people

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,15 @@
-[DEFAULT]
+[LOCAL]
 language = en-US
-mongo_port = localhost:5005
+mongo_host = localhost
+mongo_port = 27017
 port = 5002
-rasa = http://rasa-nlu.svc.cluster.local:5005
+rasa = http://localhost:5005/model/parse
+
+[KUBE]
+language = en-US
+mongo_host = 137.226.232.75
+mongo_port = 32112
+port = 5002
+rasa = http://rasa-nlu.ba-stuecker:5005/model/parse
+
 
